# regcmd

./: Cargo.toml  Dockerfile  README.md
src/: command_manager.rs  main.rs
src/models/: cli.rs  command.rs
